--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);/*!
+@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css);/*!
  *   AdminLTE v3.0.4
  *   Author: Colorlib
  *   Website: AdminLTE.io <http://adminlte.io>
