--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-//
-=======
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
@@ -13,10 +10,13 @@
 // Estilos AdminLTE
 @import '~admin-lte/dist/css/adminlte.css';
 
+// // Datatables.net
+@import 'https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css';
+
+
 // FONT AWESOME
 $fa-font-path:        "../webfonts";
 
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
->>>>>>> 10c4c2e619c91fee98607f00be38764c6adb6010
